--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=PixiVerse
+server.port=${SERVER_PORT:8080}
+# Database Connection
+spring.datasource.driver-class-name=${DB_DRIVER:org.mariadb.jdbc.Driver}
+spring.datasource.url=${DB_URL:jdbc:mariadb://localhost:3306/pixi_verse?createDatabaseIfNotExist=true}
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASSWORD:}
+spring.jpa.hibernate.ddl-auto=${DDL:update}
+spring.jpa.show-sql=${HIBERNATE_SHOW_SQL:true}
+# API Setup
+stability.api.base-url=https://api.stability.ai
+stability.api.key=${STABILITY_API_KEY}
+# Feign Client conf to handle multipart form data
+feign.encode.encoder-class=org.springframework.openfeign.support.SpringEncoder
