--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=PixiVerse
 server.port=${SERVER_PORT:8080}
 # Database Connection
 spring.datasource.driver-class-name=${DB_DRIVER:org.mariadb.jdbc.Driver}
-spring.datasource.url=${DB_URL:jdbc:mariadb://localhost:3306/pixi_verse?createDatabaseIfNotExist=true}
+spring.datasource.url=${DB_URL:jdbc:mariadb://localhost:3306/pixi_verse_db?createDatabaseIfNotExist=true}
 spring.datasource.username=${DB_USER:root}
 spring.datasource.password=${DB_PASSWORD:}
 spring.jpa.hibernate.ddl-auto=${DDL:update}
