Finished with a bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ stability.api.base-url=https://api.stability.ai
 stability.api.key=${STABILITY_API_KEY}
 # Feign Client conf to handle multipart form data
 feign.encode.encoder-class=org.springframework.openfeign.support.SpringEncoder
+# GenAI Prompt
+gen.ai.prompt.enhance=${PROMPT: , in the beautiful, detailed pixar style of studio ghibli}
+gen.ai.engine.id=${ENGINE:stable-diffusion-v1-6}
+gen.ai.preset=${PRESET:anime}edde
