--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,9 @@ stability.api.key=${STABILITY_API_KEY}
 # Feign Client conf to handle multipart form data
 feign.encode.encoder-class=org.springframework.openfeign.support.SpringEncoder
 # GenAI Prompt
-gen.ai.prompt.enhance=${PROMPT: , in the beautiful, detailed pixar style of studio ghibli}
-gen.ai.engine.id=${ENGINE:stable-diffusion-v1-6}
-gen.ai.preset=${PRESET:anime}edde
+gen.ai.prompt.enhance=${PROMPT: , in the beautiful, detailed anime style}
+gen.ai.engine.id=${ENGINE:stable-diffusion-xl-1024-v1-0}
+gen.ai.preset=${PRESET:anime}
+# Max file size
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
