Image Processing for nearest  allowed dimension by model

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,9 @@ stability.api.key=${STABILITY_API_KEY}
 # Feign Client conf to handle multipart form data
 feign.encode.encoder-class=org.springframework.openfeign.support.SpringEncoder
 # GenAI Prompt
-gen.ai.prompt.enhance=${PROMPT: , in the beautiful, detailed anime style}
+gen.ai.prompt.enhance=${PROMPT: , in Studio Ghibli art style, dreamy colors, cinematic lighting}
 gen.ai.engine.id=${ENGINE:stable-diffusion-xl-1024-v1-0}
-gen.ai.preset=${PRESET:anime}
+gen.ai.preset=${PRESET:cinematic}
 # Max file size
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
